--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,4 @@
 cmake_minimum_required(VERSION 3.2.0 FATAL_ERROR)
 
 add_subdirectory(src/miniz)
-add_subdirectory(src/sqlite)
-add_subdirectory(src/syncdb)
+add_subdirectory(src/bootstrap)
