fix support for cmake lower than 3.13

--- a/src/bootstrap/CMakeLists.txt
+++ b/src/bootstrap/CMakeLists.txt
@@ -6,6 +6,6 @@ target_link_libraries(bootstrap PRIVATE sqlite3 miniz)
 if(MSVC)
     target_compile_definitions(bootstrap PRIVATE -D_CRT_SECURE_NO_WARNINGS)
 elseif(WIN32)
-    target_link_options(bootstrap PRIVATE -static -static-libgcc)
+    set_property(TARGET bootstrap APPEND_STRING PROPERTY LINK_FLAGS "-static -static-libgcc")
 endif()
-target_link_options(bootstrap PRIVATE -Wl,-rpath,/usr/sony/lib)
+set_property(TARGET bootstrap APPEND_STRING PROPERTY LINK_FLAGS "-Wl,-rpath,/usr/sony/lib")
